--- a/template.html
+++ b/template.html
@@ -321,7 +321,7 @@ task.
 
 
   function loadUserProgress() {
-    pybossa.userProgress('ref2014_jeanne').done(function(data){
+    pybossa.userProgress('ref2014_jeanne_jeanne').done(function(data){
       var pct = Math.round((data.done*100)/data.total);
       $("#progress").css("width", pct.toString() +"%");
       $("#progress").attr("title", pct.toString() + "% completed!");
@@ -467,6 +467,6 @@ pybossa.presentTask(function(task, deferred) {
   }
 });
 
-pybossa.run('ref2014_jeanne');
+pybossa.run('ref2014_jeanne_jeanne');
 })();
 </script>
